# rust_bootcamp_capsote

./: Cargo.toml  README.md
rust_backend/: Cargo.toml
rust_backend/src/: errors.rs  game.rs  lobby.rs  main.rs  messages.rs  start_connection.rs  ws.rs
rust_bevy/: Cargo.toml
rust_bevy/src/: main.rs
rust_cli/: Cargo.toml  README.md
rust_cli/src/: main.rs
