[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "4.3.1"
actix-web-actors= "4.2.0"
actix = "0.13.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"