[package]
name = "rust_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
tungstenite = "0.20.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.20.0"
uuid = { version = "1.4.1", features = ["serde"] }
